--- a/hasil.html
+++ b/hasil.html
@@ -28,7 +28,7 @@
   
   
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="./style.css" rel="stylesheet">
   <style type="text/css">
     * {
       box-sizing: border-box;}
